scss/partials/_oc_mentions.scss
.oc-mentions {
  span.oc-mention[data-found="true"] {
    color: $carrot_green !important;
    position: relative;
    background-color: $feint_emerald !important;
    padding: 1px;
    border-radius: 2px;
  }
}

div.oc-mention-panel {
  border-radius: 6px;
  background-color: $deep_navy;
  width: 226px;
  color: white;
  max-height: 45vh;
  overflow-y: auto;
  overflow-x: hidden;
  text-align: left;
  border: none;

  div.oc-mention-options {
    div.oc-mention-option {
      height: 56px;
      width: 100%;
      padding: 16px;
      cursor: pointer;
      background-color: transparent;

      &.active {
        background-color: rgba(#32C97B, 0.5);
      }

      div.oc-mention-option-avatar {
        width: 24px;
        height: 24px;
        border-radius: 50%;
        background-size: 24px 24px;
        background-position: center;
        background-repeat: no-repeat;
        float: left;
      }

      div.oc-mention-option-title {
        width: calc(100% - 38px);
        height: 16px;
        line-height: 16px;
        margin-top: -4px;
        @include avenir_H();
        color: white;
        font-size: 14px;
        float: right;
        text-align: let;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
      }

      div.oc-mention-option-subline {
        width: calc(100% - 38px);
        height: 18px;
        line-height: 18px;
        // margin-left: 16px;
        @include avenir_R();
        color: white;
        font-size: 12px;
        opacity: 0.8;
        float: right;
        text-align: let;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;

        &.slack-icon {
          &:before {
            display: block;
            content: "";
            float: left;
            width: 14px;
            height: 14px;
            background-image: cdnUrl("/img/ML/slack_mention_icon.svg");
            background-size: 14px 14px;
            background-position: center;
            background-repeat: no-repeat;
            margin-right: 6px;
          }
        }
      }
    }
  }
}

div.oc-mention-popup {
  position: absolute;
  top: 24px;
  left: 0px;
  width: auto;
  max-width: 280px;
  background-color: $deep_navy;
  border-radius: 6px;
  padding: 16px;
  height: 56px;
  overflow: hidden;
  z-index: 1000;

  div.oc-mention-popup-avatar {
    width: 24px;
    height: 24px;
    background-size: 24px auto;
    background-position: center;
    background-repeat: no-repeat;
    float: left;
    border-radius: 50%;
    overflow: hidden;
  }

  div.oc-mention-popup-name {
    margin-left: 40px;
    @include avenir_H();
    font-size: 14px !important;
    color: white !important;
    line-height: 14px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-top: -2px;
  }

  div.oc-mention-popup-subline {
    margin-left: 40px;
    @include avenir_R();
    font-size: 12px !important;
    color: rgba(white, 0.8) !important;
    text-align: left;
    line-height: 12px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    margin-top: 4px;
  }
}

