Use fixed positioning for mentions popup calculated dynamically to avoid hiding under containers, make sure it doesn't overflow at the end of the screen to.

--- a/scss/partials/_oc_mentions.scss
+++ b/scss/partials/_oc_mentions.scss
@@ -91,9 +91,9 @@ div.oc-mention-panel {
 }
 
 div.oc-mention-popup {
-  position: absolute;
+  position: fixed;
   top: 24px;
-  left: 0px;
+  left: -500px;
   width: auto;
   max-width: 280px;
   background-color: $deep_navy;
